--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
             <version>2.3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
