--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "OnlineBookstoreManagementSystem",
   "version": "1.0.0",
   "dependencies": {
-    "axios": "^1.5.1"
+    "axios": "^1.5.1",
+    "element-ui": "^2.15.14"
   }
 }
