--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 aliyun:
     oss:
-        accessKeyId: xxxxxxxxx
-        accessKeySecret: xxxxxxxxx
+        accessKeyId: LTAI5t7G5Eou5WyiwPrgNm3x
+        accessKeySecret: RmcQTOVKRUV7sqmCY312dk5tx1gyKF
         bucketName: kdl-you
         endpoint: https://oss-cn-wuhan-lr.aliyuncs.com
 mybatis:
@@ -11,7 +11,7 @@ mybatis:
 spring:
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        password: 426255
+        password: 123456
         url: jdbc:mysql://localhost:3306/bookseller
         username: root
     servlet:
